--- a/react-practice/src/App.css
+++ b/react-practice/src/App.css
@@ -41,3 +41,13 @@
   height: 100px;
   width: 100px;
 }
+
+.box {
+  height: 100px;
+  width: 100px;
+  border: solid black 2px;
+}
+
+.parent-box {
+  display: flex;
+}
